# serializ

./: et --mixed HEAD~1  main.py  pyproject.toml
django/: pyproject.toml
django/config/: settings.py
django/myproject/myproject/: settings.py
django_1/: pyproject.toml
djen2/: .gitignore  README.md  manage.py  pyproject.toml
djen2/brods/: admin.py  apps.py  serializers.py  urls.py  views.py
djen2/config/: settings.py  urls.py  wsgi.py
djen2/users/: admin.py  managers.py  models.py
djen2/users/migrations/: 0001_initial.py
djenerics/: .flake8  .gitignore  README.md  manage.py  requirements.txt
djenerics/brods/: admin.py  models.py  serializers.py  urls.py  views.py
djenerics/brods/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
djenerics/config/: asgi.py  settings.py  urls.py  wsgi.py
djenerics/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
djenerics/users/fixtures/: groups.json
djenerics/users/management/commands/: create_groups.py  (+1 more)
djenerics/users/migrations/: 0002_payment.py
dpro/: .gitignore  pyproject.toml
dpro/catalog/: urls.py  views.py
dpro/config/: settings.py  urls.py
jen/: .env  requirements.txt
python9/: w.html
pythonProject3/: pyproject.toml
pythonProject6/: pyproject.toml
pythonProject7/: manage.py  pyproject.toml
pythonProject7/config/: settings.py  urls.py
pythonProject7/dogs/: models.py  urls.py
sk_5/: .flake8  pyproject.toml
sk_5/src/: main.py
sk_5/test/: test_main.py
sk_6/: pyproject.toml
sk_6/src/: main.py
sk_6/test/: test_main.py
(+2 files in other folders)
